finalized all files glowbyte, fix lenta

--- a/GlowByte Hackathon Electricity Consumption Forecasting/orakul_eda_notebook.ipynb
+++ b/GlowByte Hackathon Electricity Consumption Forecasting/orakul_eda_notebook.ipynb
@@ -5,9 +5,10 @@
    "metadata": {},
    "source": [
     "# Прогнозирование электропотребления в регионе\n",
+    "*Ноутбук с исследовательским анализом данных первого этапа*\n",
     "\n",
     "**Задача:**  \n",
-    "Разработка модели прогнозирования общего энергопотребления региона на каждый час, в МВт*ч\n",
+    "Разработка модели прогнозирования общего энергопотребления региона на сутки, в МВт*ч\n",
     "\n",
     "**Цель:**  \n",
     "Разработать надежную и точную модель прогнозирования объема\n",
@@ -28,12 +29,7 @@
     "\n",
     "\n",
     "- `test_dataset.csv` – исторические данные о потреблении энергии за период 2023-04-01 – 2023-07-31\n",
-    "\n",
-    "\n",
-    "**Метрики качества**:\n",
-    "- MAE (Главная метрика)\n",
-    "- MAPE (Вспомогательная метрика)\n",
-    "- R2-score (Вспомогательная метрика)\n"
+    "\n"
    ]
   },
   {
@@ -43,7 +39,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Загрузка-и-общий-обзор-данных\" data-toc-modified-id=\"Загрузка-и-общий-обзор-данных-1\">Загрузка и общий обзор данных</a></span></li><li><span><a href=\"#Исследовательский-анализ-данных\" data-toc-modified-id=\"Исследовательский-анализ-данных-2\">Исследовательский анализ данных</a></span><ul class=\"toc-item\"><li><span><a href=\"#Признаки\" data-toc-modified-id=\"Признаки-2.1\">Признаки</a></span></li><li><span><a href=\"#Исследование-временного-ряда\" data-toc-modified-id=\"Исследование-временного-ряда-2.2\">Исследование временного ряда</a></span></li><li><span><a href=\"#Обработка-текстовых-признаков-'weather_pred'\" data-toc-modified-id=\"Обработка-текстовых-признаков-'weather_pred'-2.3\">Обработка текстовых признаков 'weather_pred'</a></span></li><li><span><a href=\"#Feature-engineering\" data-toc-modified-id=\"Feature-engineering-2.4\">Feature engineering</a></span></li><li><span><a href=\"#Корреляционный-анализ\" data-toc-modified-id=\"Корреляционный-анализ-2.5\">Корреляционный анализ</a></span></li></ul></li><li><span><a href=\"#Моделирование\" data-toc-modified-id=\"Моделирование-3\">Моделирование</a></span><ul class=\"toc-item\"><li><span><a href=\"#LGBMRegressor\" data-toc-modified-id=\"LGBMRegressor-3.1\">LGBMRegressor</a></span></li><li><span><a href=\"#Stacking--с-LGBM\" data-toc-modified-id=\"Stacking--с-LGBM-3.2\">Stacking  с LGBM</a></span></li><li><span><a href=\"#Тестирование\" data-toc-modified-id=\"Тестирование-3.3\">Тестирование</a></span></li><li><span><a href=\"#Оценка-важности-признаков\" data-toc-modified-id=\"Оценка-важности-признаков-3.4\">Оценка важности признаков</a></span></li></ul></li><li><span><a href=\"#Выводы-и-резюме\" data-toc-modified-id=\"Выводы-и-резюме-4\">Выводы и резюме</a></span><ul class=\"toc-item\"><li><span><a href=\"#main.py\" data-toc-modified-id=\"main.py-4.1\">main.py</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Загрузка-и-общий-обзор-данных\" data-toc-modified-id=\"Загрузка-и-общий-обзор-данных-1\">Загрузка и общий обзор данных</a></span></li><li><span><a href=\"#Исследовательский-анализ-данных\" data-toc-modified-id=\"Исследовательский-анализ-данных-2\">Исследовательский анализ данных</a></span><ul class=\"toc-item\"><li><span><a href=\"#Признаки\" data-toc-modified-id=\"Признаки-2.1\">Признаки</a></span></li><li><span><a href=\"#Исследование-временного-ряда\" data-toc-modified-id=\"Исследование-временного-ряда-2.2\">Исследование временного ряда</a></span></li><li><span><a href=\"#Обработка-текстовых-признаков-'weather_pred'\" data-toc-modified-id=\"Обработка-текстовых-признаков-'weather_pred'-2.3\">Обработка текстовых признаков 'weather_pred'</a></span></li><li><span><a href=\"#Feature-engineering\" data-toc-modified-id=\"Feature-engineering-2.4\">Feature engineering</a></span></li><li><span><a href=\"#Корреляционный-анализ\" data-toc-modified-id=\"Корреляционный-анализ-2.5\">Корреляционный анализ</a></span></li></ul></li><li><span><a href=\"#Итоги-исследовательского-анализа-данных:\" data-toc-modified-id=\"Итоги-исследовательского-анализа-данных:-3\">Итоги исследовательского анализа данных:</a></span></li></ul></div>"
    ]
   },
   {
@@ -2639,7 +2635,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Итоги исследовательского анализа данных:** \n",
+    "## Итоги исследовательского анализа данных:\n",
     "\n",
     "Временной ряд:\n",
     "- 4 с половиной года, последовательный, полный и стационарный.\n",
@@ -2653,13 +2649,19 @@
     "Погода:  \n",
     "- Важный фактор повышения электропотребления - температура окружающей среды и, следовательно, другие аспекты погоды, которые влияют на температуру и её ощущение: облачность (влияет на освещение), ветер, осадки, влажность.\n",
     "- Целевой признак с температурой имеет отрицательную зависимость: с понижением температуры повышается потребление. Но после +20 градусов видим перелом и уже увеличение потребления с повышением температуры (охлаждение помещений в жаркую погоду)\n",
-    "- Текствовый столбец с описанием прогнозируемой погоды weather_pred заполняется вручную, из-за чего содержит много уникальных значений. Для сохранения информации из признака закодируем его с помощью CountVectorizer с предварительной очисткой. В результате получим ряд бинарных признаков, которые представляют собой часто встречающиеся очищенные слова с флагом их появления в описании.\n",
-    "- Из weather_pred выделен признак с относительной влажностью. Так как значение влажности указано не везде, то признак будет содержать много пропусков, что решим использованием модели, способной их обрабатывать.\n",
+    "- Текствовый столбец с описанием прогнозируемой погоды weather_pred заполняется вручную, из-за чего содержит много уникальных значений. Для сохранения информации из признака закодируем его с помощью CountVectorizer с предварительной очисткой. В результате получим ряд бинарных признаков, которые представляют собой часто встречающиеся очищенные слова с флагом их появления в описании. Отдельно выделим значение вероятности осадков.\n",
     "\n",
     "Новые признаки:\n",
     "- Дополнительно были сгенерированы календарные и лаговые признаки\n",
     "- Целевой признак имеет сильные линейные зависимости с лаговыми признаками и слабые с часом суток и признаком \"ночь\", температурами, сезоном. Нелинейные зависимости в разном проявлении имеются почти со всеми признаками.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
