--- a/prosept-hack-notebook.ipynb
+++ b/prosept-hack-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d0ec096d",
+   "id": "d32bf84f",
    "metadata": {
     "toc": true
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "id": "8fb58f06",
    "metadata": {},
    "outputs": [],
@@ -88,16 +88,13 @@
     "# pandas==2.0.0 \n",
     "# numpy==1.23.5 \n",
     "# seaborn==0.11.1 \n",
-    "# phik==0.10.0 \n",
     "# sklearn==1.2.2 \n",
-    "# statsmodels==0.13.2 \n",
-    "# lightgbm==3.3.5 \n",
-    "# joblib==1.2.0 \n",
     "# matplotlib==3.7.1 \n",
     "# nltk==3.8.1\n",
-    "# sentence_transformers\n",
-    "# tqdm\n",
-    "# sentence-transformers\n"
+    "# sentence_transformers==2.2.2\n",
+    "# tqdm==4.65.0\n",
+    "# pymorphy2==0.9.1\n",
+    "# re==2.2.1"
    ]
   },
   {
@@ -713,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "423de312",
+   "id": "8d0c29b7",
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6935c449",
+   "id": "a0abd52f",
    "metadata": {},
    "outputs": [
     {
@@ -1375,7 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "19834c80",
+   "id": "b54fd535",
    "metadata": {},
    "outputs": [
     {
@@ -1739,7 +1736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c45bfec",
+   "id": "cc640e2c",
    "metadata": {},
    "source": [
     "6 продуктов одной категории имею рекомендуемую цену 0. Заказчик прокоментировал, что это могут быть продукты, который на момент выгрузки выводятся или добавляются в ассортимент. Пока оставляем, так как признак второсттепенный "
@@ -1929,7 +1926,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e09b127f",
+   "id": "505ad86c",
    "metadata": {},
    "source": [
     "---"
@@ -2188,7 +2185,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3e20599c",
+   "id": "d0c1e4af",
    "metadata": {},
    "outputs": [
     {
@@ -2210,7 +2207,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b58cb167",
+   "id": "ccfbf780",
    "metadata": {},
    "outputs": [
     {
@@ -2245,7 +2242,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ca53d0a4",
+   "id": "188d2c16",
    "metadata": {},
    "outputs": [
     {
@@ -2265,7 +2262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "541da192",
+   "id": "47125be7",
    "metadata": {},
    "source": [
     "В таблице со спарсенными данными marketing_dealerprice.csv есть 363 значения ключей, которые отсутствуют в датасете с ключами. Как следствие мы имеем 2849 спарсенных названий без указания правильного названия, используемого у производителя. Эти данные не будем использовать в работе\n"
@@ -2777,7 +2774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b617505",
+   "id": "5a240bda",
    "metadata": {},
    "source": [
     "**Итоги знакомства с данными**\n",
@@ -2873,7 +2870,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "eaca64bd",
+   "id": "344302ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2974,7 +2971,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "df747d01",
+   "id": "1e90e57a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2985,7 +2982,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d1c70025",
+   "id": "ffceb56f",
    "metadata": {},
    "outputs": [
     {
@@ -3347,7 +3344,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "cc090833",
+   "id": "ddd5b909",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3413,7 +3410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2d82eec",
+   "id": "bd81709a",
    "metadata": {},
    "source": [
     "! Важно перезаписать индексы!"
@@ -3466,7 +3463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fbe5505",
+   "id": "8417b963",
    "metadata": {},
    "source": [
     "\n",
@@ -3477,7 +3474,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "80f6d8d1",
+   "id": "4a12091f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3552,7 +3549,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "8f6ebd46",
+   "id": "7c79caf0",
    "metadata": {},
    "outputs": [
     {
@@ -3627,7 +3624,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "1d4cb370",
+   "id": "a499b711",
    "metadata": {},
    "outputs": [
     {
@@ -3910,7 +3907,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a2f2cee",
+   "id": "3288d40b",
    "metadata": {},
    "source": [
     "## Итоги\n",
@@ -3930,7 +3927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "920d03e4",
+   "id": "8920d5a3",
    "metadata": {},
    "outputs": [],
    "source": []
