update model.py Vanya-version, add data_dealers

--- a/model.ipynb
+++ b/model.ipynb
@@ -1,22 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2a322aaf",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"></ul></div>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "af9512c1",
+   "execution_count": 3,
+   "id": "431f9c1d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Моющее средство для бани и сауны Multipower Wood концентрат / 1 л',\n",
-       " 'Концентрат для мытья полов MULTIPOWER с ароматом цитрусаконцентрат / 1 л',\n",
-       " 'Антисептик для внутренних работ PROSEPT SAUNA концентрат 1:10 / 1 л',\n",
-       " 'Универсальный концентрат для мытья полов Multipower FLOOR концентрат 1:10-1:200 / 1 л',\n",
-       " 'Средство для мытья полов всех типов Multipower Neutral концентрат 1:64 - 1:500 / 1 л']"
+       "['Средство усиленного действия для чистки коптильных камер Duty Fog концентрат / 20 л',\n",
+       " 'Средство для рук гигиеническое с антибактериальным эффектом PROSEPT готовый состав / 5 л',\n",
+       " 'Средство для рук гигиеническое с антибактериальным эффектом PROSEPT готовый состав / 0,8 л',\n",
+       " 'Кожный антисептик PROF DZ готовый состав / 0,1 л',\n",
+       " 'Герметик акриловой  цвет Белый, 7 кг']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,6 +42,8 @@
     "from nltk.tokenize import word_tokenize\n",
     "from sentence_transformers import SentenceTransformer, util\n",
     "import pymorphy2\n",
+    "import sys\n",
+    "\n",
     "\n",
     "\n",
     "def matching(product_name):\n",
@@ -49,14 +62,6 @@
     "\n",
     "        # Токенизация\n",
     "        tokens = word_tokenize(cleaned_text.lower())\n",
-    "\n",
-    "    #     # Лемматизация ттолько русских слов, английские являются неизменяемыми названиями\n",
-    "    #     morph = pymorphy2.MorphAnalyzer()\n",
-    "    #     lemmas = [morph.parse(word)[0][2] for word in tokens]\n",
-    "\n",
-    "        # Удаление стоп-слов\n",
-    "    #     stop_words = set(stopwords.words('russian') + stopwords.words('english'))\n",
-    "    #     filtered_words = [lemma for lemma in lemmas if lemma not in stop_words]\n",
     "\n",
     "        # Возвращение предобработанного текста\n",
     "        return ' '.join(tokens)\n",
@@ -110,12 +115,11 @@
     "    \n",
     "    data_products = data_products.dropna( subset=['name']).reset_index(drop=True)\n",
     "\n",
+    "    model_labse = SentenceTransformer('sentence-transformers/LaBSE')\n",
     "\n",
     "    # очистка названий товаров заказчика в data_products\n",
     "    names_corpus = data_products['name_1c'].apply(lambda x: preprocess_text(x)).tolist()\n",
     "    \n",
-    "    model_labse = SentenceTransformer('sentence-transformers/LaBSE')\n",
-    "\n",
     "    corpus_embeddings_labse = model_labse.encode(names_corpus)\n",
     "    \n",
     "    recommendations = get_rec_labse(product_name)\n",
@@ -123,26 +127,20 @@
     "    return recommendations\n",
     "\n",
     "# тест\n",
-    "# product_name = 'Средство моющее для бани и сауны Prosept Multipower Wood 1л'\n",
+    "# product_name = 'Спрей для очистки полков в банях и саунах Universal Wood, 0,5л'\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Check if an argument is passed\n",
+    "    if len(sys.argv) > 1:\n",
+    "        product_name = sys.argv[1]\n",
+    "        recommendations = matching(product_name)\n",
+    "        print(recommendations)\n",
+    "    else:\n",
+    "        print(\"No product name provided.\")\n",
+    "\n",
     "\n",
     "matching(product_name)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5567441f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8308619f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
